199 ==> 430132 - Some vertical videos are rotated sideways in preview player.
200 ==> 430147 - Search and escaping of database wildcard characters in filenames.
201 ==> 430134 - Face tags lost and captions mis-transferred after digiKam automatically renames a conflicting filename.
202 ==> 430189 - Can't login because I have no rights to access the Database.
203 ==> 430179 - Thumbnails sort order.
204 ==> 425746 - No thumbnails when importing photos from camera.
205 ==> 429116 - System crash under macOS 11 install. Does not load.
206 ==> 430451 - Building Fingerprint abruptly stops.
207 ==> 430427 - PSD files cannot be viewed. Thumbnails are OK.
208 ==> 430566 - Make DK_PLUGIN_PATH allow multiple paths.
209 ==> 429103 - digiKam 7.1.0 does not start up, when using macos big sur.
210 ==> 372487 - BQM says there are unprocessed items even though it completed successfully and all images were processed.
211 ==> 430664 - How to access a database and files from another computer in LAN.
212 ==> 430684 - Renaming mp4 files - metadata fields have no values.
213 ==> 430589 - Want to disable face detection extra download on Mac version.
214 ==> 383096 - digiKam crash, maintenance related?
215 ==> 430762 - Change icon size for people keywords.
216 ==> 430337 - Failed to create a new people tag.
217 ==> 430250 - Provide filetype-based filter for running face detection.
218 ==> 423386 - Unconfirmed face detections treated as confirmed.
219 ==> 397229 - Facetags are not well displayed in the facetag list for one person.
220 ==> 430810 - Cannot found Slideshow settings dialog page.
221 ==> 376891 - Digikam becomes unusable with many Metatags.
222 ==> 417399 - Wishlist: button to hide confirmed faces for a person.
223 ==> 279667 - Face thumbnails from people tags does not support drag and drop.
224 ==> 430818 - In Batch Queue Manager, the "Run" command, execute always the first queue.
225 ==> 426860 - digiKam not entirely behaving as app on MacOS.
226 ==> 