@@ -243,4 +243,5 @@ BUGFIXES:
 223 ==> 279667 - Face thumbnails from people tags does not support drag and drop.
 224 ==> 430818 - In Batch Queue Manager, the "Run" command, execute always the first queue.
 225 ==> 426860 - digiKam not entirely behaving as app on MacOS.
-226 ==> 
+226 ==> 430903 - Do not enlarge smaller photos.
+227 ==> 
